--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-cryptography==40.0.2
 pandas==2.0.1
-PyMySQL==1.0.3
 SQLAlchemy==2.0.12
 streamlit==1.22.0
+PyMySQL==1.0.3
+cryptography==40.0.2
 urllib3==1.26.6
+numpy==1.24.3
