--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas==2.0.1
-SQLAlchemy==2.0.12
-streamlit==1.22.0
+altair==5.5.0
+pandas==2.2.3
+SQLAlchemy==2.0.41
+streamlit==1.45.1
 PyMySQL==1.0.3
 cryptography==40.0.2
 urllib3==1.26.6
